@startuml
skinparam classFontSize 13
skinparam classAttributeIconSize 0
left to right direction

class VideoPlayerApp {
  - mediaPlayer: MediaPlayer
  - mediaView: MediaView
  - controllerBar: VideoControllerBar
  - primaryStage: Stage
  - hostServices: HostServices
  - fadeOutTransition: FadeTransition
  + start(Stage): void
  + loadVideoFile(File): void
  + showSettingsWindow(): void
}

class VideoControllerBar {
  - mediaPlayer: MediaPlayer
  - stage: Stage
  - progressSlider: Slider
  - volumeSlider: Slider
  + VideoControllerBar(MediaPlayer, Stage, MediaView)
  + togglePlayPause(): void
  + updateMediaPlayer(MediaPlayer): void
  + handleMouseMove(): void
}

class FileUtils {
  + chooseVideoFile(Stage): File
}

class SettingsPanel {
  - prefs: Preferences
  + createGeneralSettings(): VBox
  + createPlayerSettings(): VBox
}

package "JavaFX Framework" {
  class MediaPlayer #lightgray
  class Stage #lightgray
  class Scene #lightgray
  class Preferences #lightgray
}

VideoPlayerApp --> VideoControllerBar : 包含
VideoPlayerApp ..> FileUtils : 使用
VideoPlayerApp --> SettingsPanel : 创建
VideoControllerBar --> MediaPlayer : 控制
SettingsPanel ..> Preferences : 使用

VideoPlayerApp --> MediaPlayer
VideoPlayerApp --> Stage
VideoPlayerApp --> Scene

hide empty members
@enduml